# internal/controller/account/auth_controller.go
@@ -69,3 +69,58 @@ func (c *cUserAuth) VerifyOTP(w http.ResponseWriter, r *http.Request) {
 	}
 	response.SuccessResponse(w, codeStatus, data)
 }
+
+
+
+// User Set Passaword Verified documentation
+// @Summary      User Set Password Verified
+// @Description  Set Password when user verified
+// @Tags         Account Management
+// @Accept       json
+// @Produce      json
+// @Param		 payload body model.SetPasswordRequest true "payload"
+// @Success      200	{object}	response.ResponseData
+// @Failure		 400	{object}	response.ResponseData
+// @Failure 	 500	{object}	response.ResponseData
+// @Router       /user/set_password [post]
+func (c *cUserAuth) UpdatePasswordVerified(w http.ResponseWriter, r *http.Request) {
+	var params model.SetPasswordRequest
+	if err := utils.ParseJSON(r, &params); err != nil {
+		response.ErrorResponse(w, response.ErrCodeParamInvalid, err.Error())
+		return
+	}
+
+	codeStatus, err := service.UserAuth().UpdatePasswordVerified(&params)
+	if err != nil {
+		global.Logger.Error("Error Set Password", zap.Error(err))
+		response.ErrorResponse(w, codeStatus, err.Error())
+		return
+	}
+	response.SuccessResponse(w, codeStatus, nil)
+}
+
+// User Login documentation
+// @Summary      User Login
+// @Description  User Login
+// @Tags         Account Management
+// @Accept       json
+// @Produce      json
+// @Param		 payload body model.LoginRequest true "payload"
+// @Success      200	{object}	response.ResponseData
+// @Failure		 400	{object}	response.ResponseData
+// @Failure 	 500	{object}	response.ResponseData
+// @Router       /user/login [post]
+func (c *cUserAuth) Login(w http.ResponseWriter, r *http.Request) {
+	var params model.LoginRequest
+	if err := utils.ParseJSON(r, &params); err != nil {
+		response.ErrorResponse(w, response.ErrCodeParamInvalid, err.Error())
+		return
+	}
+	codeStatus, data, err := service.UserAuth().Login(&params)
+	if err != nil {
+		global.Logger.Error("Error Login", zap.Error(err))
+		response.ErrorResponse(w, codeStatus, err.Error())
+		return
+	}
+	response.SuccessResponse(w, codeStatus, data)
+}
