# internal/model/auth.go
@@ -12,5 +12,21 @@ type VerifyRequest struct {
 
 type VerifyOTPResponse struct {
 	Token  string `json:"token"`
-	UserId string `json:"user_id"`
+	UserId int    `json:"user_id"`
+}
+
+type SetPasswordRequest struct {
+	VerifyKeyHash string `json:"verify_key_hash" validate:"required"`
+	Password      string `json:"password" validate:"required"`
+}
+
+type LoginRequest struct {
+	Email    string `json:"email" validate:"required"`
+	Password string `json:"password" validate:"required"`
+}
+
+type LoginResponse struct {
+	UserId       int    `json:"user_id"`
+	AccessToken  string `json:"access_token"`
+	RefreshToken string `json:"refresh_token"`
 }
